--- a/app/src/main/res/layout/c_profile.xml
+++ b/app/src/main/res/layout/c_profile.xml
@@ -9,7 +9,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
-    <edu.cmu.juicymeeting.model.RoundedImageView
+    <edu.cmu.juicymeeting.util.RoundedImageView
         android:layout_width="150dp" android:layout_height="150dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:layout_centerHorizontal="true"
