--- a/app/src/main/res/layout/event_list_card.xml
+++ b/app/src/main/res/layout/event_list_card.xml
@@ -76,7 +76,7 @@ event time: id: event_list_card_time
                 android:orientation="horizontal"
                 android:layout_gravity="center_vertical">
 
-                <edu.cmu.juicymeeting.model.RImageView
+                <edu.cmu.juicymeeting.util.RImageView
                     android:id="@+id/event_list_card_portrait"
                     android:layout_width="@dimen/event_list_card_portrait_size"
                     android:layout_height="@dimen/event_list_card_portrait_size"
