--- a/app/src/main/res/layout/explore.xml
+++ b/app/src/main/res/layout/explore.xml
@@ -5,58 +5,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainPage"
     android:orientation="vertical"
+    android:background="@color/dark_grey"
     >
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:id="@+id/intro"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-
-        android:text="Discover events nearby."
-        android:fontFamily="sans-serif"
-        android:gravity="center_horizontal"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        />
-
-    <Button
-        android:layout_marginTop="20dp"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-
-        android:text="Refresh"
-        android:textStyle="bold"
-        android:background="#F12345"
-        android:fontFamily="sans-serif"
-        />
-
-    <View
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
-
-    <TextView
-        android:layout_marginTop="20dp"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-
-        android:text="Nearby Events"
-        android:fontFamily="sans-serif"
-        android:gravity="center_horizontal"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/exploreList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:scrollbars="vertical" />
-
 </LinearLayout>
