--- a/app/src/main/res/layout/event_list_card.xml
+++ b/app/src/main/res/layout/event_list_card.xml
@@ -65,10 +65,12 @@ event time: id: event_list_card_time
                 <!--android:textSize="@dimen/event_list_card_text_size"/>-->
         <!--</LinearLayout>-->
 
+<!--
+            android:layout_below="@id/event_list_card_background"
+-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/event_list_card_background"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -110,11 +112,13 @@ event time: id: event_list_card_time
                     android:text="Followed by 33 pll"/>
             </LinearLayout>
 
+            <!--
+                            android:layout_below="@id/event_list_card_background">
+-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_below="@id/event_list_card_background">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/event_list_card_location"
