--- a/app/src/main/res/layout/group_chat.xml
+++ b/app/src/main/res/layout/group_chat.xml
@@ -8,7 +8,8 @@ join group button: group_join
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainPage"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainPage"
     android:orientation="vertical"
     android:background="@color/dark_grey">
 
@@ -18,42 +19,52 @@ join group button: group_join
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
-        <TextView
-            android:id="@+id/group_create"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/group_create"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="@dimen/small_padding"
+                android:gravity="center"
+
+                android:text="Create"
+                android:textSize="@dimen/button_text_size"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:onClick="createGroup"
+                />
+        </LinearLayout>
+
+        <View
+            android:paddingLeft="@dimen/medium_padding"
             android:paddingRight="@dimen/medium_padding"
-
-            android:text="Create"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:background="@color/transparent"
-            android:onClick="createGroup"
-            />
-
-        <TextView
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="@color/grey"/>
 
-        <TextView
-            android:id="@+id/group_join"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingLeft="@dimen/medium_padding"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/group_join"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/small_padding"
+                android:gravity="center"
 
-            android:text="Join"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:background="@color/transparent"
-            android:onClick="joinGroup"
-            />
+                android:text="Join"
+                android:textSize="@dimen/button_text_size"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:onClick="joinGroup" />
+        </LinearLayout>
     </LinearLayout>
 
     <View
