--- a/app/src/main/res/layout/upcoming_event.xml
+++ b/app/src/main/res/layout/upcoming_event.xml
@@ -8,31 +8,29 @@ event list: event_list
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/medium_padding"
+    android:paddingRight="@dimen/medium_padding"
     tools:context=".MainPage"
+    android:background="@color/dark_grey"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/group_create"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="@dimen/small_padding"
         android:gravity="center"
-        android:layout_marginTop="20dp"
 
         android:text="Create"
-        android:textSize="20sp"
+        android:textSize="@dimen/button_text_size"
         android:textStyle="bold"
-        android:textColor="@color/black"
-        android:background="@color/transparent"
-        android:onClick="createEvent"
-        />
+        android:textColor="@color/white"/>
 
     <View
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="@dimen/medium_padding"
+        android:layout_marginBottom="@dimen/medium_padding"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"/>
