--- a/app/src/main/res/layout/event_detail.xml
+++ b/app/src/main/res/layout/event_detail.xml
@@ -14,7 +14,8 @@ event description: event_detail_description
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_grey">
+    android:background="@color/dark_grey"
+    android:theme="@style/AppTheme">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,17 +62,21 @@ event description: event_detail_description
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:gravity="center">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/create"/>
                 <TextView
                     android:id="@+id/event_detail_join_leave_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="@drawable/rectangle"
 
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textStyle="bold"
                     android:textColor="@color/white"
-                    android:text="    Join Group    "/>
+                    android:text="Join Group"/>
             </LinearLayout>
         </LinearLayout>
 
