--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="gray_light">#e8e8e8</color>
 
     <color name="grey">#999999</color>
+    <color name="grey_4">#444444</color>
     <color name="sexy_pink">#E0006C</color>
     <color name="light_grey">#EEEEEE</color>
 
