update event detail, add map and little modify

--- a/app/src/main/res/layout/group_chat.xml
+++ b/app/src/main/res/layout/group_chat.xml
@@ -25,7 +25,8 @@ join group button: group_join
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:gravity="center"
+            android:onClick="createGroup">
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -42,7 +43,6 @@ join group button: group_join
                 android:textSize="@dimen/button_text_size"
                 android:textStyle="bold"
                 android:textColor="@color/white"
-                android:onClick="createGroup"
                 />
         </LinearLayout>
 
@@ -58,7 +58,8 @@ join group button: group_join
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:gravity="center"
+            android:onClick="joinGroup">
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -73,8 +74,7 @@ join group button: group_join
                 android:text="Join"
                 android:textSize="@dimen/button_text_size"
                 android:textStyle="bold"
-                android:textColor="@color/white"
-                android:onClick="joinGroup" />
+                android:textColor="@color/white"/>
         </LinearLayout>
     </LinearLayout>
 
