--- a/app/src/main/res/layout/upcoming_event.xml
+++ b/app/src/main/res/layout/upcoming_event.xml
@@ -16,7 +16,7 @@ event list: event_list
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/group_create"
+        android:id="@+id/event_create"
         android:layout_gravity="center"
         android:padding="@dimen/small_padding"
         android:gravity="center"
