--- a/app/src/main/res/layout/event_list_card.xml
+++ b/app/src/main/res/layout/event_list_card.xml
@@ -26,50 +26,49 @@ event time: id: event_list_card_time
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <!--<ImageView-->
-            <!--android:id="@+id/event_list_card_image"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="300dp"-->
-            <!--android:src="@drawable/coffee"-->
-            <!--android:scaleType="centerCrop"-->
-            <!--android:adjustViewBounds="false"/>-->
+        <ImageView
+            android:id="@+id/event_list_card_image"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:src="@drawable/coffee"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="false"/>
 
-        <!--<LinearLayout-->
-            <!--android:id="@+id/event_list_card_background"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignBottom="@id/event_list_card_image"-->
-            <!--android:orientation="vertical">-->
-            <!--<TextView-->
-                <!--android:id="@+id/event_list_card_name"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:paddingLeft="@dimen/event_list_card_padding"-->
+        <LinearLayout
+            android:id="@+id/event_list_card_background"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/event_list_card_image"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/event_list_card_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/event_list_card_padding"
 
-                <!--android:textColor="@color/white"-->
-                <!--android:text="Coffee"-->
-                <!--android:textStyle="bold"-->
-                <!--android:fontFamily="monospace"-->
-                <!--android:textSize="@dimen/event_list_card_text_size"/>-->
+                android:textColor="@color/white"
+                android:text="Coffee"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
+                android:textSize="@dimen/event_list_card_text_size"/>
 
-            <!--<TextView-->
-                <!--android:id="@+id/event_list_card_description"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:paddingLeft="@dimen/event_list_card_padding"-->
+            <TextView
+                android:id="@+id/event_list_card_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/event_list_card_padding"
 
-                <!--android:textColor="@color/white"-->
-                <!--android:text="new coffee"-->
-                <!--android:fontFamily="monospace"-->
-                <!--android:textSize="@dimen/event_list_card_text_size"/>-->
-        <!--</LinearLayout>-->
+                android:textColor="@color/white"
+                android:text="new coffee"
+                android:fontFamily="monospace"
+                android:textSize="@dimen/event_list_card_text_size"/>
+        </LinearLayout>
 
-<!--
-            android:layout_below="@id/event_list_card_background"
--->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/event_list_card_background"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
