--- a/app/src/main/res/layout/create_event.xml
+++ b/app/src/main/res/layout/create_event.xml
@@ -7,6 +7,7 @@ create event description: create_event_description
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:theme="@style/AppTheme"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainPage"
@@ -19,10 +20,10 @@ create event description: create_event_description
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_height="@dimen/app_top_button_height"
+            android:layout_gravity="center"
             android:background="@color/transparent"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/create_event_cancel"
@@ -76,21 +77,16 @@ create event description: create_event_description
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <ImageView
-                    android:id="@+id/create_event_image"
+                <View
+                    android:id="@+id/create_event_placeholder"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:src="@drawable/photo"
-                    android:background="@color/transparent"
-                    android:scaleType="center"
-                    android:adjustViewBounds="false"
-                    android:elevation="3dp"/>
+                    android:layout_height="300dp"/>
 
                 <LinearLayout
                     android:id="@+id/create_event_main_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignBottom="@id/create_event_image"
+                    android:layout_alignBottom="@id/create_event_placeholder"
                     android:orientation="vertical">
                     <EditText
                         android:id="@+id/create_event_name"
@@ -111,8 +107,25 @@ create event description: create_event_description
 
                         android:textColor="@color/black"
                         android:fontFamily="monospace"
-                        android:textSize="@dimen/event_list_card_text_size"/>
+                        android:textSize="@dimen/event_list_card_small_text_size"/>
                 </LinearLayout>
+
+                <View
+                    android:id="@+id/create_event_select"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    />
+                <ImageView
+                    android:id="@+id/create_event_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:src="@drawable/photo"
+                    android:background="@color/transparent"
+                    android:scaleType="center"
+                    android:adjustViewBounds="false"
+                    android:elevation="3dp"/>
+
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
