--- a/app/src/main/res/layout/join_group.xml
+++ b/app/src/main/res/layout/join_group.xml
@@ -17,7 +17,8 @@ cancel button: join_group_cancel_button
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/app_top_button_height"
+        android:gravity="center"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
