--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,9 +27,11 @@
 
     <dimen name="event_list_card_height">80dp</dimen>
     <dimen name="event_list_card_elevation">1dp</dimen>
+    <dimen name="event_list_card_small_text_size">20dp</dimen>
     <dimen name="event_list_card_text_size">30dp</dimen>
     <dimen name="event_list_card_padding">15dp</dimen>
     <dimen name="event_list_card_portrait_size">20dp</dimen>
+    <dimen name="event_list_image_height">400dp</dimen>
 
     <dimen name="profile_portrait_size">100dp</dimen>
 
@@ -45,5 +47,7 @@
     <dimen name="small_text_size">10sp</dimen>
     <dimen name="medium_text_size">20sp</dimen>
     <dimen name="large_text_size">30sp</dimen>
+
+    <dimen name="app_top_button_height">48dp</dimen>
 
 </resources>
