--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,14 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/main_color_gray</item>
         <item name="colorPrimaryDark">@color/main_color_gray_dk</item>
-        <item name="colorAccent">@color/white</item>
+        <item name="android:colorAccent" tools:ignore="NewApi">@color/sexy_pink</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:navigationBarColor" tools:ignore="NewApi">@color/black</item>
+        <item name="android:windowActionBar">true</item>
+        <item name="android:windowContentTransitions" tools:ignore="NewApi">true</item>
     </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
