--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -1,82 +1,97 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.cmu.android.juicymeeting.CreateEvent"
-    android:background="@color/white_smoke">
-
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/main_color_green">
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:id="@+id/group_chat_back_btn"
-            android:src="@drawable/back_arrow"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="#00000000"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/group_chat"
-            android:id="@+id/create_event"
-            android:layout_gravity="center"
-            android:layout_weight="15"
-            />
-
-    </LinearLayout>
+    tools:context=".MainActivity"
+    android:id="@+id/mainholder"
+    android:background="#ffffffff">
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ListView
-            android:id="@+id/chat_group_list"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:divider="@color/white"
-            android:dividerHeight="@dimen/pad_5dp"
-            android:fastScrollEnabled="true"
-            android:layout_gravity="center_horizontal"
-            android:paddingBottom="@dimen/pad_10dp"
-            android:paddingTop="@dimen/pad_10dp"
-            tools:listitem="@layout/chat_item_rcv" />
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:weightSum="1"
+        android:id="@+id/linearlayout">
 
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/gray_light"
-            android:gravity="center_vertical"
-            android:padding="@dimen/pad_5dp"
-            tools:context=".MainActivity">  <!-- don't know what this does -->
+            android:gravity="center_horizontal"
+            android:weightSum="1"
+            android:padding="1dp"
+            android:clickable="true"
+            android:id="@+id/topbar">
 
-            <EditText
-                android:id="@+id/edit_chat_msg"
-                style="@style/edittext_msg"
+            <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"/>
-
-            <Button
-                android:id="@+id/send_msg_btn"
-                style="@style/btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_send" />
-
+                android:layout_height="63dp"
+                android:id="@+id/imageView"
+                android:src="@drawable/layer_logo_app"
+                android:visibility="visible"
+                android:layout_weight="0.17"
+                android:layout_margin="5dp" />
         </LinearLayout>
+
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/scrollView"
+            android:layout_weight="1"
+            android:padding="8dp"
+            android:paddingLeft="8dp"
+            android:paddingTop="8dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="8dp">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:id="@+id/conversation"></LinearLayout>
+        </ScrollView>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:paddingLeft="8dp"
+            android:paddingTop="8dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/typingIndicator"
+                android:textStyle="italic" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/input"
+                    android:textColor="@color/black"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Send"
+                    android:id="@+id/send" />
+            </LinearLayout>
+        </LinearLayout>
+
     </LinearLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
