--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="@color/light_grey"
-        android:centerColor="@color/grey_4"
-        android:endColor="@color/dark_grey"
+        android:startColor="@color/purple_extra_light"
+        android:centerColor="@color/purple_light"
+        android:endColor="@color/purple"
         android:type="linear"
         android:angle="135"/>
 </shape>
