--- a/app/src/main/res/layout/create_group.xml
+++ b/app/src/main/res/layout/create_group.xml
@@ -11,9 +11,7 @@ cencel: create_group_cancel_button
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainPage"
-    android:orientation="vertical"
-    android:background="@color/dark_grey"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,7 +36,7 @@ cencel: create_group_cancel_button
                 android:text="Cancel"
                 android:textSize="@dimen/button_text_size"
                 android:textStyle="bold"
-                android:textColor="@color/white"
+                android:textColor="@color/grey"
                 android:background="@color/transparent"/>
 
             <View
@@ -57,7 +55,7 @@ cencel: create_group_cancel_button
                 android:text="OK"
                 android:textSize="@dimen/button_text_size"
                 android:textStyle="bold"
-                android:textColor="@color/white"
+                android:textColor="@color/grey"
                 android:background="@color/transparent"
                 />
         </LinearLayout>
@@ -95,7 +93,7 @@ cencel: create_group_cancel_button
         android:hint="ex:1234"
         android:textColorHint="@color/grey"
         android:textSize="@dimen/large_text_size"
-        android:textColor="@color/white"
+        android:textColor="@color/grey"
         />
 
     <TextView
@@ -105,7 +103,7 @@ cencel: create_group_cancel_button
 
         android:textSize="@dimen/medium_text_size"
         android:gravity="center"
-        android:textColor="@color/white" />
+        android:textColor="@color/grey" />
 
 
 
