--- a/app/src/main/res/layout/event_detail.xml
+++ b/app/src/main/res/layout/event_detail.xml
@@ -16,8 +16,7 @@ event description: event_detail_description
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/event_detail_wrapper"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/dark_grey">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -78,7 +77,7 @@ event description: event_detail_description
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textStyle="bold"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey"
                     android:text="Join Group"/>
             </LinearLayout>
         </LinearLayout>
@@ -119,7 +118,7 @@ event description: event_detail_description
 
                 android:textSize="@dimen/event_detail_name_text_size"
                 android:text="Coffee"
-                android:textColor="@color/white"/>
+                android:textColor="@color/grey"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -174,7 +173,7 @@ event description: event_detail_description
 
                 android:text="Some description"
                 android:textSize="@dimen/event_detail_description_text_size"
-                android:textColor="@color/white"/>
+                android:textColor="@color/grey"/>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
