--- a/app/src/main/res/layout/group_chat.xml
+++ b/app/src/main/res/layout/group_chat.xml
@@ -11,8 +11,7 @@ join group button: group_join
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainPage"
-    android:orientation="vertical"
-    android:background="@color/dark_grey">
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/group_create"
@@ -42,7 +41,7 @@ join group button: group_join
                 android:text="Create"
                 android:textSize="@dimen/button_text_size"
                 android:textStyle="bold"
-                android:textColor="@color/white"
+                android:textColor="@color/grey"
                 />
         </LinearLayout>
 
@@ -74,7 +73,7 @@ join group button: group_join
                 android:text="Join"
                 android:textSize="@dimen/button_text_size"
                 android:textStyle="bold"
-                android:textColor="@color/white"/>
+                android:textColor="@color/grey"/>
         </LinearLayout>
     </LinearLayout>
 
